--- a/samples/Constraints/vc2013/Constraints.vcxproj
+++ b/samples/Constraints/vc2013/Constraints.vcxproj
@@ -10,7 +10,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{909E8564-2501-4AAD-ABCF-61AB35BACE33}</ProjectGuid>
+    <ProjectGuid>{F896D3DA-D8E3-4640-9AD4-D926FDD2CEAF}</ProjectGuid>
     <RootNamespace>Constraints</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
@@ -108,6 +108,7 @@
   <ItemGroup>
     <ClCompile Include="..\src\ConstraintsApp.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\BulletContext.cpp" />
+    <ClCompile Include="..\..\..\src\Cinder-Bullet3D\CollisionObject.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\Common.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintBase.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintConeTwist.cpp" />
@@ -118,6 +119,7 @@
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\PhyObjTriggerVol.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\PhysicsDebugRenderable.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\RigidBody.cpp" />
+    <ClCompile Include="..\..\..\src\Cinder-Bullet3D\SoftBody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h" />
@@ -328,6 +330,7 @@
     <ClInclude Include="..\..\..\src\BulletPhysics\vectormath\sse\vectormath_aos.h" />
     <ClInclude Include="..\..\..\src\BulletPhysics\vectormath\vmInclude.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\BulletContext.h" />
+    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\CollisionObject.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\Common.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintBase.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintConeTwist.h" />
@@ -336,10 +339,10 @@
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintPoint2Point.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\MotionState.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhyObjCharacterController.h" />
-    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhyObjConvexHull.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhyObjTriggerVol.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhysicsDebugRenderable.h" />
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\RigidBody.h" />
+    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\SoftBody.h" />
     <ClInclude Include="..\..\..\src\BulletPhysics\BulletCollision\BroadPhaseCollision\btAxisSweep3.cpp" />
     <ClInclude Include="..\..\..\src\BulletPhysics\BulletCollision\BroadPhaseCollision\btBroadphaseProxy.cpp" />
     <ClInclude Include="..\..\..\src\BulletPhysics\BulletCollision\BroadPhaseCollision\btCollisionAlgorithm.cpp" />
