--- a/samples/PhysicsPrimitives/vc2012/PhysicsPrimitives.vcxproj.filters
+++ b/samples/PhysicsPrimitives/vc2012/PhysicsPrimitives.vcxproj.filters
@@ -13,73 +13,73 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
     <Filter Include="Blocks">
-      <UniqueIdentifier>{CC108FAF-2DCA-4EC7-B3D7-7409A20F2A83}</UniqueIdentifier>
+      <UniqueIdentifier>{1C13577A-F3B2-456B-9163-6E7D83C5CB3C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics">
-      <UniqueIdentifier>{E28824D7-7836-41F6-84C8-90AFE9689500}</UniqueIdentifier>
+      <UniqueIdentifier>{6CAEB57E-F545-4949-A659-D735A8642AB0}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src">
-      <UniqueIdentifier>{4BDCE69A-E9B4-43C2-BB53-ABE651BA5F76}</UniqueIdentifier>
+      <UniqueIdentifier>{56D50B56-3D3F-429F-A50D-F4E8DA608D5D}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics">
-      <UniqueIdentifier>{20C40E22-146E-4E73-B694-138844A6ACE7}</UniqueIdentifier>
+      <UniqueIdentifier>{8A88EBD0-5642-4642-86F3-95DC8D5C7CCD}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletCollision">
-      <UniqueIdentifier>{8701A11E-582A-4A90-9B50-D4984F18FB9C}</UniqueIdentifier>
+      <UniqueIdentifier>{10151453-F3EE-4E2D-ABAC-4BE1C552C514}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletCollision\BroadPhaseCollision">
-      <UniqueIdentifier>{8C8555A1-1BAA-4308-8C09-61BBA7F0CEA0}</UniqueIdentifier>
+      <UniqueIdentifier>{FC355A05-AE52-4A8F-8953-ABD3FCC18699}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletCollision\CollisionDispatch">
-      <UniqueIdentifier>{F0ECCF72-CF89-4E17-88D5-EB315FF548DD}</UniqueIdentifier>
+      <UniqueIdentifier>{669CAB66-1E44-4798-99A3-1FEBD046F106}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletCollision\CollisionShapes">
-      <UniqueIdentifier>{3C89016A-69B5-4B21-9D6F-94CDE5490339}</UniqueIdentifier>
+      <UniqueIdentifier>{2989F414-4934-4128-8073-E82D1CE83FBF}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletCollision\GImpact">
-      <UniqueIdentifier>{AB070971-210A-485A-8117-063A2C50FE87}</UniqueIdentifier>
+      <UniqueIdentifier>{5B67C289-2D2A-4F79-B9DC-EEF3546FA330}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletCollision\NarrowPhaseCollision">
-      <UniqueIdentifier>{02B4F389-4C3C-425B-9CF9-13493453B52D}</UniqueIdentifier>
+      <UniqueIdentifier>{21B73563-0124-422D-989C-3A4DD3AD1A0D}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics">
-      <UniqueIdentifier>{F13C36BE-D210-4EE7-8A9E-33ACB39B4F72}</UniqueIdentifier>
+      <UniqueIdentifier>{9910F952-E7E0-49FF-BEE1-84D848A13655}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics\Character">
-      <UniqueIdentifier>{B9D61184-6CCC-45E0-A889-8D048F2E5A92}</UniqueIdentifier>
+      <UniqueIdentifier>{ACB1004E-CC74-4584-B5E4-619A3DF6E7D9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics\ConstraintSolver">
-      <UniqueIdentifier>{47EF569F-0592-4282-98F1-34C594F4D04B}</UniqueIdentifier>
+      <UniqueIdentifier>{93BEABBF-5AD5-4C9A-A377-C8958F0B88D6}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics\Dynamics">
-      <UniqueIdentifier>{08E43BC6-75BE-4966-B677-4D8B0A6D8DBB}</UniqueIdentifier>
+      <UniqueIdentifier>{626A1DF1-0A10-42B5-A7DE-7D74261D29E9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics\FeatherStone">
-      <UniqueIdentifier>{DFD7157A-0D4B-4769-833E-76AEA0CB3A71}</UniqueIdentifier>
+      <UniqueIdentifier>{4C20E3F4-124D-4443-BD1A-F990E3B4916D}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics\MLCPSolvers">
-      <UniqueIdentifier>{9E2A203A-5F52-46F4-A251-B39610DC8264}</UniqueIdentifier>
+      <UniqueIdentifier>{09478BDD-37E5-4106-9A45-9B202E34E162}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletDynamics\Vehicle">
-      <UniqueIdentifier>{A412B109-1637-497E-8463-F1472B761C1C}</UniqueIdentifier>
+      <UniqueIdentifier>{0A9E472B-2AB5-4B05-BEEF-84E26C0A89F9}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\BulletSoftBody">
-      <UniqueIdentifier>{AB5DBDC9-7DA3-44E8-B3D5-655FE9DE4A92}</UniqueIdentifier>
+      <UniqueIdentifier>{BD600D03-8F15-464F-B189-9791F5847374}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\vectormath">
-      <UniqueIdentifier>{B6578502-1171-4F76-B528-F357EEF1476D}</UniqueIdentifier>
+      <UniqueIdentifier>{505D6427-7969-4DBB-A8E1-5F75B489144C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\vectormath\neon">
-      <UniqueIdentifier>{8EEE124D-60D2-420B-8501-ABF88FBCB76A}</UniqueIdentifier>
+      <UniqueIdentifier>{1B99D124-735F-46DB-8E26-416A2929932A}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\vectormath\scalar">
-      <UniqueIdentifier>{ACE7B295-0BB4-4125-918A-C5D4D292E9EC}</UniqueIdentifier>
+      <UniqueIdentifier>{7D57A42C-80D2-4DDC-9505-F3C5F9A2F60E}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\BulletPhysics\vectormath\sse">
-      <UniqueIdentifier>{F7209471-4032-4BA3-8231-29F3FACF2969}</UniqueIdentifier>
+      <UniqueIdentifier>{EDB8F5F0-01A9-4305-9B16-443C844C573F}</UniqueIdentifier>
     </Filter>
     <Filter Include="Blocks\Bullet 3D Physics\src\Cinder-Bullet3D">
-      <UniqueIdentifier>{E18C2858-09D7-446E-87A8-8C27EA42BCBE}</UniqueIdentifier>
+      <UniqueIdentifier>{A01850B9-7FCB-4BBC-B749-F7ED5009AB2D}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -713,10 +713,16 @@
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\BulletContext.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\CollisionObject.h">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\Common.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintBase.h">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintConeTwist.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintGeneric6Dof.h">
@@ -725,13 +731,13 @@
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintHinge.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\ConstraintPoint2Point.h">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\MotionState.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhyObjCharacterController.h">
-      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhyObjConvexHull.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\PhyObjTriggerVol.h">
@@ -741,6 +747,9 @@
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Cinder-Bullet3D\RigidBody.h">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Cinder-Bullet3D\SoftBody.h">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\BulletPhysics\BulletCollision\BroadPhaseCollision\btAxisSweep3.cpp">
@@ -1142,16 +1151,25 @@
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\BulletContext.cpp">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\Cinder-Bullet3D\CollisionObject.cpp">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\Common.cpp">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintBase.cpp">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintConeTwist.cpp">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintGeneric6Dof.cpp">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintHinge.cpp">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\Cinder-Bullet3D\ConstraintPoint2Point.cpp">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\PhyObjCharacterController.cpp">
@@ -1164,6 +1182,9 @@
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\RigidBody.cpp">
+      <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\Cinder-Bullet3D\SoftBody.cpp">
       <Filter>Blocks\Bullet 3D Physics\src\Cinder-Bullet3D</Filter>
     </ClCompile>
   </ItemGroup>
